--- a/risking_app/pubspec.yaml
+++ b/risking_app/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - assets/LogoRisking.png
+    - assets/LogoAgua.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
