add tierra y row

--- a/risking_app/pubspec.yaml
+++ b/risking_app/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   assets:
     - assets/LogoRisking.png
     - assets/LogoAgua.jpg
+    - assets/Tierra.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
